# myoooext

./: .hgignore  CMakeLists.txt  ChangeLog.txt  INSTALL.txt  README.txt  description.xml  mkdeb.sh  uno-extension-manifest.xml
debian/: README.Debian  changelog  control  copyright  docs  openoffice.org3-dict-my.install  postinst  prerm  rules
debian/patches/: disable_copyright.patch  series
dict/: my_MM.aff  my_MM.dic
l10n/: description_en-US.txt  description_my-MM.txt  license_en-US.txt
src/: MyanmarBreak.cpp  MyanmarBreak.hxx  MyanmarBreakIterator.cxx  MyanmarBreakIterator.hxx  oooextDiagnostic.cxx  oooextDiagnostic.hxx  test_MyanmarBreak.cpp  test_MyanmarBreakIterator.cxx
